# simple-cpp-client-server

./: Makefile  README.md  docker-compose.yml
client/: CMakeLists.txt  Dockerfile  client.cpp
server/: Dockerfile  main.py
